fixed loop counter and changed opacity for readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
     width: 650px;
     margin: auto;
     height: 600px;
-    background-color: rgb(221, 221, 221, 0.5);
+    background-color: rgb(221, 221, 221, 0.7);
     margin-top: 200px;
 }
 
